# hina

./: .clang-format  .clang-tidy  .clangdqcrq  .editorconfig  .gitignore  CMakeLists.txt  README.md  build-clang.ps1  build-msvc.ps1  default.nix  run.py  setup_vendor_nixos.py  setup_vendor_windows.py  shell.nix
scripts/windows/: llvm_run_debug.ps1  llvm_run_release.ps1  msvc_run_debug.ps1  msvc_run_release.ps1
scripts/windows/common/: common.ps1
scripts/windows/llvm/: run_app_debug.ps1  run_app_release.ps1
scripts/windows/msvc/: run_app_debug.ps1  run_app_release.ps1
src/: CMakeLists.txt  cmake.h.in  main.cpp  version.h.in
src/log/: CMakeLists.txt  log.cpp  log.h
src/math/: point.cpp  point.h
src/meta/: meta.h  meta.h.in
